--- a/trunk/generic/tests/SConscript
+++ b/trunk/generic/tests/SConscript
@@ -6,3 +6,4 @@ Import('env', 'lib')
 
 env.Program('AutoTests', ['AutoTests.c', 'TestBitArray.c', 'TestCharSet.c',
                           lib])
+env.Program('TestScanner', ['TestScanner.c', lib])
