--- a/generic/tests/SConscript
+++ b/generic/tests/SConscript
@@ -7,3 +7,4 @@ Import('env', 'lib')
 env.Program('AutoTests', ['AutoTests.c', 'TestBitArray.c', 'TestCharSet.c',
                           lib])
 env.Program('TestScanner', ['TestScanner.c', lib])
+env.Program('TestGlobals', ['TestGlobals.c', lib])
