--- a/trunk/generic/SConstruct
+++ b/trunk/generic/SConstruct
@@ -13,6 +13,7 @@ cpppath = [topsrc] + map(lambda subdir: os.path.join(topsrc, subdir),
 if sys.platform == 'win32':
     # The following Environment setup is used with MSVC in Win32.
     env = Environment(ENV = os.environ,
+#                      CCFLAGS = ['-g', '-Wall'],
                       CPPPATH = cpppath)
     # The following Environment setup is used with gcc in Win32.
     #env = Environment(ENV = os.environ,
@@ -23,6 +24,9 @@ elif sys.platform == 'linux2':
     # The following Environemtn setup is used in Linux.
     env = Environment(CCFLAGS = ['-g', '-Wall'],
                       CPPPATH = cpppath)
+#
+#print "env['TOOLS'] =", env['TOOLS']
+#print "env['CCFLAGS'] =", env['CCFLAGS']
 
 Export('env')
 
