--- a/trunk/generic/schemes/SConscript
+++ b/trunk/generic/schemes/SConscript
@@ -7,7 +7,7 @@ import os.path
 Import('env')
 Import('libobjs')
 
-#libobjs.extend(map(lambda src: env.Object(src),
-#                   ['OutputScheme.c', 'SourceOutputScheme.c']))
+libobjs.extend(map(lambda src: env.Object(src),
+                   ['OutputScheme.c']))
 
 SConscript(os.path.join('c', 'SConscript'))
