--- a/trunk/generic/schemes/SConscript
+++ b/trunk/generic/schemes/SConscript
@@ -11,3 +11,4 @@ libobjs.extend(map(lambda src: env.Object(src),
                    ['OutputScheme.c']))
 
 SConscript(os.path.join('c', 'SConscript'))
+SConscript(os.path.join('dump', 'SConscript'))
