--- a/generic/schemes/c/SConscript
+++ b/generic/schemes/c/SConscript
@@ -6,6 +6,7 @@ Import('env')
 Import('libobjs')
 
 libobjs.extend(map(lambda src: env.Object(src),
-                   ['CDefs.c', 'ErrorPool.c', 'Buffer.c',
-                    'Token.c', 'Position.c', 'Scanner.c',
-                    'Parser.c', 'CGlobals.c', 'COutputScheme.c']))
+                   ['CDefs.c', 'ErrorPool.c', 'Buffer.c', 'Token.c',
+                    'Position.c', 'Scanner.c', 'Parser.c', 'CGlobals.c',
+                    'XmlScanner.c', 'XSData.c', 'XmlParser.c', 'CXmlGlobals.c',
+                    'COutputScheme.c']))
