--- a/trunk/generic/tests/SConscript
+++ b/trunk/generic/tests/SConscript
@@ -8,4 +8,4 @@ env.Program('AutoTests', ['AutoTests.c', 'TestBitArray.c', 'TestCharSet.c',
                           lib])
 env.Program('TestScanner', ['TestScanner.c', lib])
 env.Program('TestXmlScanner', ['TestXmlScanner.c', lib], LIBS=['expat'])
-env.Program('TestGlobals', ['TestGlobals.c', lib])
+env.Program('TestGlobals', ['TestGlobals.c', lib], LIBS=['expat'])
