--- a/generic/core/SConscript
+++ b/generic/core/SConscript
@@ -6,5 +6,5 @@ Import('env')
 Import('libobjs')
 
 libobjs.extend(map(lambda src: env.Object(src),
-                   ['Defs.c', 'Object.c', 'String.c', 'ArrayList.c',
+                   ['Defs.c', 'Object.c', 'BasicObjects.c', 'ArrayList.c',
                     'BitArray.c', 'HashTable.c', 'Globals.c', 'Arguments.c']))
