--- a/generic/schemes/c/SConscript
+++ b/generic/schemes/c/SConscript
@@ -7,6 +7,5 @@ Import('libobjs')
 
 libobjs.extend(map(lambda src: env.Object(src),
                    ['CDefs.c', 'ErrorPool.c', 'Buffer.c', 'Token.c',
-                    'Position.c', 'Scanner.c', 'Parser.c', 'CGlobals.c',
-                    'XmlScanner.c', 'XmlParser.c', 'COutputScheme.c',
-                    'XmlScanOper.c']))
+                    'Position.c', 'Scanner.c', 'Parser.c',
+                    'XmlScanner.c', 'XmlParser.c', 'COutputScheme.c']))
