--- a/schemes/csharp/test/SConscript
+++ b/schemes/csharp/test/SConscript
@@ -28,4 +28,4 @@ csenv['CSCFLAGS'] = SCons.Util.CLVar('')
 csenv['CSCCOM'] = SCons.Action.Action(csccom)
 csenv['CSCLIBCOM'] = SCons.Action.Action(csclibcom)
 
-#TestExe = csenv.CLIProgram('Test', ['Token.cs', 'Buffer.cs'])
+TestExe = csenv.CLIProgram('Test', ['ErrorPool.cs', 'Token.cs', 'Buffer.cs'])
