--- a/trunk/schemes/csharp/test/SConscript
+++ b/trunk/schemes/csharp/test/SConscript
@@ -29,4 +29,4 @@ csenv['CSCCOM'] = SCons.Action.Action(csccom)
 csenv['CSCLIBCOM'] = SCons.Action.Action(csclibcom)
 
 #TestExe = csenv.CLIProgram('Test', ['ErrorPool.cs', 'Token.cs', 'Buffer.cs',
-#                                    'Position.cs', 'Scanner.cs'])
+#                                    'Position.cs', 'Scanner.cs', 'Parser.cs'])
