--- a/trunk/tests/csharp/SConscript
+++ b/trunk/tests/csharp/SConscript
@@ -2,31 +2,9 @@
 # Author: Charles Wang <charlesw123456@gmail.com>
 # License: GPLv2
 
-import os.path
+Import('env')
 
-import SCons.Builder
-import SCons.Node.FS
-import SCons.Util
-
-csenv = Environment()
-csccom = "$CSC $CSCFLAGS -out:${TARGET.abspath} $SOURCES"
-csclibcom = "$CSC -t:library $CSCLIBFLAGS $_CSCLIBPATH $_CSCLIBS -out:${TARGET.abspath} $SOURCES"
-
-McsBuilder = SCons.Builder.Builder(action = '$CSCCOM',
-                                   source_factory = SCons.Node.FS.default_fs.Entry,
-                                   suffix = '.exe')
-McsLibBuilder = SCons.Builder.Builder(action = '$CSCLIBCOM',
-                                      source_factory = SCons.Node.FS.default_fs.Entry,
-                                      suffix = '.dll')
-csenv['BUILDERS']['CLIProgram'] = McsBuilder
-csenv['BUILDERS']['CLILibrary'] = McsLibBuilder
-
-csenv['CSC'] = 'gmcs'
-csenv['_CSCLIBS'] = "${_stripixes('-r:', CILLIBS, '', '-r', '', __env__)}"
-csenv['_CSCLIBPATH'] = "${_stripixes('-lib:', CILLIBPATH, '', '-r', '', __env__)}"
-csenv['CSCFLAGS'] = SCons.Util.CLVar('')
-csenv['CSCCOM'] = SCons.Action.Action(csccom)
-csenv['CSCLIBCOM'] = SCons.Action.Action(csclibcom)
-
-#TestExe = csenv.CLIProgram('Test', ['ErrorPool.cs', 'Token.cs', 'Buffer.cs',
-#                                    'Position.cs', 'Scanner.cs', 'Parser.cs'])
+if 'mono' in env['COCO_FEATURES']:
+    TestExe = env.CLIProgram('Test', ['Main.cs', 'ErrorPool.cs', 'Token.cs',
+                                      'Buffer.cs', 'Position.cs', 'Scanner.cs',
+                                      'Parser.cs'])
