--- a/schemes/c/SConscript
+++ b/schemes/c/SConscript
@@ -2,6 +2,8 @@
 # Author: Charles Wang <charlesw123456@gmail.com>
 # License: GPLv2
 
+import os.path
+
 Import('env')
 Import('libobjs')
 Import('cocosrc_libobjs')
@@ -12,5 +14,6 @@ libobjs.extend(map(lambda src: env.Object(src),
 if  'expat' in env['COCO_FEATURES']:
     libobjs.extend(map(lambda src: env.Object(src), ['XmlScanOper.c']))
 cocosrc_libobjs.extend(map(lambda src: env.Object(src),
-                           ['Scanner.c', 'Parser.c', 'XmlScanner.c',
-                            'XmlParser.c', 'COutputScheme.c']))
+                           ['Scanner.c', 'Parser.c', 'COutputScheme.c']))
+
+SConscript(os.path.join('xml', 'SConscript'))
