--- a/trunk/applications/pgn/SConscript
+++ b/trunk/applications/pgn/SConscript
@@ -6,4 +6,4 @@ Import('env', 'lib', 'cocoexe')
 
 env.Command(['Scanner.h', 'Scanner.c', 'Parser.h', 'Parser.c'],
             'pgn.atg', '%s $SOURCES' % str(cocoexe[0]))
-env.Program('TestPgn', ['main.c', 'Parser.c', 'Scanner.c', lib])
+env.Program('TestPgn', ['main.c', 'pgnoper.c', 'Parser.c', 'Scanner.c', lib])
